# CertiFlow

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/certiq_net/: __init__.py
src/certiq_net/configs/model/: certiq_index.yaml
src/certiq_net/dispatcher/: __init__.py  types.py
src/certiq_net/dispatcher/certiq/: __init__.py  cost_learner.py  index_model.py
src/certiq_net/experiments/: __init__.py  checkpoint_state.py
src/certiq_net/studies/: __init__.py  run_benchmark.py
src/certiq_net/studies/qgym_eval/: __init__.py  _qgym_paths.py  evaluate.py  policy.py
src/certiq_net/studies/qgym_eval/patches/: .allocator_golden.pkl  0001-fix-tensor-warnings.patch  0002-tune-hyperparams.patch  0003-vectorize-collect-rollouts.patch  0004-vectorize-allocator.patch  0005-st_argmin-inference-fast-path.patch  0006-repeat-to-expand.patch  0007-step-return-numpy.patch  0008-tensor-service-times.patch  0009-pure-torch-allocator.patch  0010-gpu-rng.patch  0011-batched-step.patch  0012-fix-gradient-accumulation.patch  (+14 more)
src/certiq_net/studies/run_benchmark/: __init__.py  __main__.py
src/certiq_net/utils/: __init__.py  platform.py
tests/: diagnose_divergence.py  diagnose_freeze.py  test_certificate.py  test_model_smoke.py  test_patch_validation.py  test_reward_scale.py  test_utils.py
tests/verify/: test_2A_eval_frequency.py  test_2B_encoder_optimizer.py  test_2C_seed_reproducibility.py  test_2D_done_termination.py  test_3A_observation_range.py  test_3B_gradient_accumulation.py  test_3C_test_env_device.py  test_production_config.py
(+7 files in other folders)
